[package]
name = "cube"
version = "0.1.0"
authors = ["Gareth <gareth.w.owen@gmail.com>"]

[dependencies]
cgmath = "0.16.1"
bitflags = "1.0.0"
enum_primitive = "0.1"
libc = "0.2"
log = "0.4"
semver = "0.2"
image = "0.20.1"
glfw = "0.23.0"
num = "0.2.0"
rand = "0.5.5"
gl = "0.10.0"

# [dependencies.glfw]
# git = "https://github.com/bjz/glfw-rs.git"

# [dependencies.glm]
# git = "https://github.com/dche/glm-rs/"